--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-dev-nodejs",
   "description": "Run webpacked nodejs apps directly from shell in-memory, with auto-reloading, clever cache invalidation and source-maps.",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "homepage": "https://github.com/paulpflug/",
   "author": {
     "name": "Paul Pflugradt",
@@ -17,23 +17,20 @@
   },
   "main": "webpack-dev-nodejs.js",
   "files": [
-    "lib/*.js"
+    "*.js"
   ],
   "bin": {
     "webpack-dev-nodejs": "./cli.js"
   },
   "devDependencies": {
-    "coffee-loader": "^0.9.0",
     "coffeescript": "^2.3.2",
-    "script-runner": "^0.1.8",
-    "snapy": "^0.1.6",
     "webpack": "^4.29.5"
   },
   "keywords": [],
   "readmeFilename": "README.md",
   "scripts": {
     "build": "coffee --bare --no-header --compile --output . src/*.coffee",
-    "test": "snapy",
+    "test": "",
     "dev": "node ./cli.js",
     "preversion": "npm run test",
     "version": "npm run build && git add .",
